--- a/index.html
+++ b/index.html
@@ -1,85 +1,103 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Valentine 💖</title>
   <style>
+    * {
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
+
     body {
       margin: 0;
       height: 100vh;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       display: flex;
-      justify-content: center;
       align-items: center;
-      font-family: 'Segoe UI', sans-serif;
+      justify-content: center;
+      overflow: hidden;
     }
 
-    .btn {
-      padding: 20px 40px;
-      font-size: 22px;
+    .container {
+      text-align: center;
+      padding: 20px;
+    }
+
+    #startBtn {
+      padding: 18px 40px;
+      font-size: 20px;
       border: none;
-      border-radius: 15px;
+      border-radius: 16px;
       cursor: pointer;
-      background-color: #ff4d6d;
+      background: #ff4d6d;
       color: white;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
       transition: transform 0.2s, box-shadow 0.2s;
     }
 
-    .btn:hover {
+    #startBtn:hover {
       transform: scale(1.05);
-      box-shadow: 0 15px 25px rgba(0,0,0,0.3);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
     }
 
-    .card {
-      display: none;
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
-      text-align: center;
-      max-width: 400px;
-      animation: fadeIn 1s ease;
-    }
-
-    .card h1 {
-      color: #ff4d6d;
-    }
-
-    .heart {
-      font-size: 50px;
-      animation: beat 1s infinite;
-    }
-
-    @keyframes beat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
+    #message {
+      font-size: 26px;
+      color: #fff;
+      opacity: 0;
+      animation: fadeIn 1s forwards;
+      text-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
 <body>
-
-  <button class="btn" onclick="showLove()">BẤM VÀO ĐÂY 💌</button>
-
-  <div class="card" id="loveCard">
-    <div class="heart">❤️</div>
-    <h1>Happy Valentine!</h1>
-    <p>
-      Chúc bạn một ngày Valentine thật ngọt ngào,  
-      luôn vui vẻ, hạnh phúc và được yêu thương 💕
-    </p>
+  <div class="container">
+    <button id="startBtn">💗 Bấm vào đây 💗</button>
+    <div id="message"></div>
   </div>
 
   <script>
-    function showLove() {
-      document.querySelector('.btn').style.display = 'none';
-      document.getElementById('loveCard').style.display = 'block';
-    }
-  </script>
+    const messages = [
+      "💖 Chúc em một Valentine thật ngọt ngào 💖",
+      "🌹 Cảm ơn em vì đã xuất hiện trong cuộc đời anh 🌹",
+      "✨ Mỗi ngày có em đều là một ngày đặc biệt ✨",
+      "💌 Mong rằng chúng ta sẽ luôn bên nhau 💌",
+      "❤️ Happy Valentine’s Day ❤️"
+    ];
 
+    const startBtn = document.getElementById("startBtn");
+    const messageDiv = document.getElementById("message");
+
+    startBtn.addEventListener("click", () => {
+      startBtn.style.display = "none";
+      let index = 0;
+
+      const showMessage = () => {
+        if (index < messages.length) {
+          messageDiv.style.opacity = 0;
+          messageDiv.innerHTML = messages[index];
+          messageDiv.style.animation = "none";
+          void messageDiv.offsetWidth; // reset animation
+          messageDiv.style.animation = "fadeIn 1s forwards";
+          index++;
+          setTimeout(showMessage, 3000);
+        }
+      };
+
+      showMessage();
+    });
+  </script>
 </body>
 </html>
+
